{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 18,
  "lineage": "6ebd3022-62a6-658c-2938-ce2d0dd8ce2d",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/148062c8-c4ce-4c5b-b71f-1c6968276c06/resourceGroups/secnet-vm-webapp-rg/providers/Microsoft.Network/networkInterfaces/secnet-vm-webapp-vm-nic",
            "internal_domain_name_suffix": "3aerzaaioz4ejirw425niq1tic.px.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/148062c8-c4ce-4c5b-b71f-1c6968276c06/resourceGroups/secnet-vm-webapp-rg/providers/Microsoft.Network/virtualNetworks/secnet-vm-webapp-vnet/subnets/vm-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "australiaeast",
            "mac_address": "7C-ED-8D-D1-86-79",
            "name": "secnet-vm-webapp-vm-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "secnet-vm-webapp-rg",
            "tags": {
              "environment": "dev",
              "owner": "rambabu",
              "project": "secure-network-vm-webapp"
            },
            "virtual_machine_id": "/subscriptions/148062c8-c4ce-4c5b-b71f-1c6968276c06/resourceGroups/secnet-vm-webapp-rg/providers/Microsoft.Compute/virtualMachines/secnet-vm-webapp-vm"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "secnet-vm-webapp-vm-nic",
            "resource_group_name": "secnet-vm-webapp-rg",
            "subscription_id": "148062c8-c4ce-4c5b-b71f-1c6968276c06"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet_vm",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/148062c8-c4ce-4c5b-b71f-1c6968276c06/resourceGroups/secnet-vm-webapp-rg/providers/Microsoft.Network/networkSecurityGroups/secnet-vm-webapp-vm-nsg",
            "location": "australiaeast",
            "name": "secnet-vm-webapp-vm-nsg",
            "resource_group_name": "secnet-vm-webapp-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH-from-Vnet",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev",
              "owner": "rambabu",
              "project": "secure-network-vm-webapp"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "secnet-vm-webapp-vm-nsg",
            "resource_group_name": "secnet-vm-webapp-rg",
            "subscription_id": "148062c8-c4ce-4c5b-b71f-1c6968276c06"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/148062c8-c4ce-4c5b-b71f-1c6968276c06/resourceGroups/secnet-vm-webapp-rg/providers/Microsoft.Network/networkSecurityGroups/secnet-vm-webapp-webapp-nsg",
            "location": "australiaeast",
            "name": "secnet-vm-webapp-webapp-nsg",
            "resource_group_name": "secnet-vm-webapp-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-Vnet-All",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev",
              "owner": "rambabu",
              "project": "secure-network-vm-webapp"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "secnet-vm-webapp-webapp-nsg",
            "resource_group_name": "secnet-vm-webapp-rg",
            "subscription_id": "148062c8-c4ce-4c5b-b71f-1c6968276c06"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/148062c8-c4ce-4c5b-b71f-1c6968276c06/resourceGroups/secnet-vm-webapp-rg/providers/Microsoft.Network/publicIPAddresses/secnet-vm-webapp-bastion-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.197.211.128",
            "ip_version": "IPv4",
            "location": "australiaeast",
            "name": "secnet-vm-webapp-bastion-pip",
            "resource_group_name": "secnet-vm-webapp-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev",
              "owner": "rambabu",
              "project": "secure-network-vm-webapp"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/27"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/148062c8-c4ce-4c5b-b71f-1c6968276c06/resourceGroups/secnet-vm-webapp-rg/providers/Microsoft.Network/virtualNetworks/secnet-vm-webapp-vnet/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "secnet-vm-webapp-rg",
            "virtual_network_name": "secnet-vm-webapp-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "AzureBastionSubnet",
            "resource_group_name": "secnet-vm-webapp-rg",
            "subscription_id": "148062c8-c4ce-4c5b-b71f-1c6968276c06",
            "virtual_network_name": "secnet-vm-webapp-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/148062c8-c4ce-4c5b-b71f-1c6968276c06/resourceGroups/secnet-vm-webapp-rg/providers/Microsoft.Network/virtualNetworks/secnet-vm-webapp-vnet/subnets/vm-subnet",
            "name": "vm-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "secnet-vm-webapp-rg",
            "virtual_network_name": "secnet-vm-webapp-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vm-subnet",
            "resource_group_name": "secnet-vm-webapp-rg",
            "subscription_id": "148062c8-c4ce-4c5b-b71f-1c6968276c06",
            "virtual_network_name": "secnet-vm-webapp-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/148062c8-c4ce-4c5b-b71f-1c6968276c06/resourceGroups/secnet-vm-webapp-rg/providers/Microsoft.Network/virtualNetworks/secnet-vm-webapp-vnet/subnets/webapp-subnet",
            "name": "webapp-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "secnet-vm-webapp-rg",
            "virtual_network_name": "secnet-vm-webapp-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "webapp-subnet",
            "resource_group_name": "secnet-vm-webapp-rg",
            "subscription_id": "148062c8-c4ce-4c5b-b71f-1c6968276c06",
            "virtual_network_name": "secnet-vm-webapp-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "vm_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/148062c8-c4ce-4c5b-b71f-1c6968276c06/resourceGroups/secnet-vm-webapp-rg/providers/Microsoft.Network/virtualNetworks/secnet-vm-webapp-vnet/subnets/vm-subnet",
            "network_security_group_id": "/subscriptions/148062c8-c4ce-4c5b-b71f-1c6968276c06/resourceGroups/secnet-vm-webapp-rg/providers/Microsoft.Network/networkSecurityGroups/secnet-vm-webapp-vm-nsg",
            "subnet_id": "/subscriptions/148062c8-c4ce-4c5b-b71f-1c6968276c06/resourceGroups/secnet-vm-webapp-rg/providers/Microsoft.Network/virtualNetworks/secnet-vm-webapp-vnet/subnets/vm-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_vm",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet_vm",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "webapp_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/148062c8-c4ce-4c5b-b71f-1c6968276c06/resourceGroups/secnet-vm-webapp-rg/providers/Microsoft.Network/virtualNetworks/secnet-vm-webapp-vnet/subnets/webapp-subnet",
            "network_security_group_id": "/subscriptions/148062c8-c4ce-4c5b-b71f-1c6968276c06/resourceGroups/secnet-vm-webapp-rg/providers/Microsoft.Network/networkSecurityGroups/secnet-vm-webapp-webapp-nsg",
            "subnet_id": "/subscriptions/148062c8-c4ce-4c5b-b71f-1c6968276c06/resourceGroups/secnet-vm-webapp-rg/providers/Microsoft.Network/virtualNetworks/secnet-vm-webapp-vnet/subnets/webapp-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_webapp",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet_webapp",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "801c09e8-7608-447c-a236-f73ed4437342",
            "id": "/subscriptions/148062c8-c4ce-4c5b-b71f-1c6968276c06/resourceGroups/secnet-vm-webapp-rg/providers/Microsoft.Network/virtualNetworks/secnet-vm-webapp-vnet",
            "location": "australiaeast",
            "name": "secnet-vm-webapp-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "secnet-vm-webapp-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/148062c8-c4ce-4c5b-b71f-1c6968276c06/resourceGroups/secnet-vm-webapp-rg/providers/Microsoft.Network/virtualNetworks/secnet-vm-webapp-vnet/subnets/vm-subnet",
                "name": "vm-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/148062c8-c4ce-4c5b-b71f-1c6968276c06/resourceGroups/secnet-vm-webapp-rg/providers/Microsoft.Network/networkSecurityGroups/secnet-vm-webapp-vm-nsg"
              },
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/148062c8-c4ce-4c5b-b71f-1c6968276c06/resourceGroups/secnet-vm-webapp-rg/providers/Microsoft.Network/virtualNetworks/secnet-vm-webapp-vnet/subnets/webapp-subnet",
                "name": "webapp-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/148062c8-c4ce-4c5b-b71f-1c6968276c06/resourceGroups/secnet-vm-webapp-rg/providers/Microsoft.Network/networkSecurityGroups/secnet-vm-webapp-webapp-nsg"
              },
              {
                "address_prefixes": [
                  "10.0.3.0/27"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/148062c8-c4ce-4c5b-b71f-1c6968276c06/resourceGroups/secnet-vm-webapp-rg/providers/Microsoft.Network/virtualNetworks/secnet-vm-webapp-vnet/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ],
            "tags": {
              "environment": "dev",
              "owner": "rambabu",
              "project": "secure-network-vm-webapp"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "secnet-vm-webapp-vnet",
            "resource_group_name": "secnet-vm-webapp-rg",
            "subscription_id": "148062c8-c4ce-4c5b-b71f-1c6968276c06"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}